add: assembly name property to CLI csProject

--- a/amp-m-cli/amp-m-cli.csproj
+++ b/amp-m-cli/amp-m-cli.csproj
@@ -8,6 +8,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>amp_m_cli</RootNamespace>
+    <AssemblyName>amp-m</AssemblyName>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PublishAot>true</PublishAot>
